--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
                <div class="input-group">
                   <label for="number">Top:</label>
-                  <input class="purple" id="number" name="number" type="number" value="" min="1" max="100"/>
+                  <input class="purple" id="number" name="number" type="number" value="" min="1" max="100" placeholder="3"/>
                </div>
 
                <div class="input-group">
@@ -54,7 +54,8 @@
                   </select>
                </div>
 
-               <input type="button" value="Search" id="btn">
+               <!-- <input type="button" value="Search" id="btn"> -->
+               <button id="btn" >Search</button>
             </form>
 
             <div id="text">
