more responsiveness and css stuffs

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
                <div class="input-group">
                   <label for="number">Top:</label>
-                  <input class="purple" id="number" name="number" type="number" value="" min="1" max="100" placeholder="3"/>
+                  <input class="purple" id="number" name="number" type="number" value="" min="1" max="100" placeholder='default = 10'/>
                </div>
 
                <div class="input-group">
