loader ui and minor stuff

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			integrity="sha256-h20CPZ0QyXlBuAw7A+KluUYx/3pK+c7lYEpqLTlxjYQ="
 			crossorigin="anonymous"
 		/>
-      <title>Chartsssss.</title>
+      <title>Chartssss.</title>
    </head>
 
    <body>
@@ -20,7 +20,8 @@
       <div class="container">
 
          <div class="header">
-            <h1>Chartsssss<span class="purple">.</span></h1>
+            <h1>Chartssss<span class="purple">.</span></h1>
+            <h3 class="purple">Discover music charts from all over the world</h3>
          </div>
 
          <div class="card">
