--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <h3 class="purple">Discover music charts from all over the world</h3>
          </div>
 
-         <div class="card">
+         <div class="card form">
             <form>
 
                <div class="input-group">
@@ -76,8 +76,8 @@
         
       </div>
 
-      <script src="js/musixmatch.js"></script>
       <script src="js/ui.js"></script>
+      <script src="js/musixmatch.js"></script>
       <script src="js/app.js"></script>
    </body>
 
