More country support. yay!

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
                <div class="input-group">
                   <label for="number">Top:</label>
-                  <input class="purple" id="number" name="number" type="number" value="" min="1" max="100" placeholder='default = 10'/>
+                  <input class="purple" id="number" name="number" type="number" value="" min="1" max="100" placeholder='10 (Default)'/>
                </div>
 
                <div class="input-group">
@@ -49,9 +49,39 @@
                      <option value="ca">Canada</option>
                      <option value="fr">France</option>
                      <option value="XW">Worldwide</option>
-                     <!-- <option value=""></option>
-                     <option value=""></option>
-                     <option value=""></option> -->
+                     <option value="au">Australia</option>
+                     <option value="br">Brazil</option>
+                     <option value="cn">China</option>
+                     <option value="dk">Denmark</option>
+                     <option value="eg">Egypt</option>
+                     <option value="fi">Finland</option>
+                     <option value="de">Germany</option>
+                     <option value="gh">Ghana</option>
+                     <option value="in">India</option>
+                     <option value="it">Italy</option>
+                     <option value="jp">Japan</option>
+                     <option value="ke">Kenya</option>
+                     <option value="mx">Mexico</option>
+                     <option value="no">Norway</option>
+                     <option value="pl">Poland</option>
+                     <option value="pt">Portugal</option>
+                     <option value="ru">Russia</option>
+                     <option value="rw">Rwanda</option>
+                     <option value="sa">Saudi Arabia</option>
+                     <option value="sn">Senegal</option>
+                     <option value="sg">Singapore</option>
+                     <option value="za">South Africa</option>
+                     <option value="es">Spain</option>
+                     <option value="se">Sweden</option>
+                     <option value="tz">Tanzania</option>
+                     <option value="th">Thailand</option>
+                     <option value="tg">Togo</option>
+                     <option value="tr">Turkey</option>
+                     <option value="ug">Uganda</option>
+                     <option value="ua">Ukraine</option>
+                     <option value="ae">United Arab Emirates</option>
+                     <option value="zm">Zambia</option>
+                     <option value="zw">Zimbabwe</option>
                   </select>
                </div>
 
@@ -60,7 +90,7 @@
             </form>
 
             <div id="text">
-               <p>Example: Top <span class="purple">10 </span><span class="purple">Artists</span> in <span class="purple">Nigeria</span></p>
+               <p>Example: Top <span class="purple">3 </span><span class="purple">Artists</span> in <span class="purple">Nigeria</span></p>
             </div>
             
          </div>
