--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
          </div>
          
          <div class="card">
+            <span class="sub top">Generated from Musixmatch API &copy;</span>
             <h2 class="heading purple"></h2>
 
             <ul class="list">
