--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
                      <option value="ng">Nigeria</option>
                      <option value="ca">Canada</option>
                      <option value="fr">France</option>
-                     <option value="XW">Worldwide</option>
+                     <!-- <option value="XW">Worldwide</option> -->
                      <option value="au">Australia</option>
                      <option value="br">Brazil</option>
-                     <option value="cn">China</option>
+                     <!-- <option value="cn">China</option> -->
                      <option value="dk">Denmark</option>
                      <option value="eg">Egypt</option>
                      <option value="fi">Finland</option>
