--- a/index.html
+++ b/index.html
@@ -104,6 +104,33 @@
                
             </ul>
          </div>
+
+         <section class="footer card">
+            <div class="main">
+               <h3>Reach Out To Me On</h3>
+               <div class="social">
+                  <!-- Mail -->
+                  <a href="mailto:tobijudah@gmail.com" target="_blank">
+                  <i class="far fa-envelope fa-lg fa-2x"> </i>
+                  </a>
+                  <!-- Twitter -->
+                  <a href="https://twitter.com/tobijudah" target="_blank">
+                  <i class="fab fa-twitter fa-lg fa-2x"> </i>
+                  </a>
+                  <!-- GitHub -->
+                  <a href="https://github.com/Tobijudah" target="_blank">
+                  <i class="fab fa-github fa-lg fa-2x"> </i>
+                  </a>
+                  <!--Linkedin -->
+                  <a href="https://www.linkedin.com/in/oluwatobiju-judah-omotosho" target="_blank">
+                  <i class="fab fa-linkedin-in fa-lg fa-2x"> </i>
+                  </a>
+               </div>
+            </div>
+            <div class="text">
+               <p>&copy; 2020 Tobijudah</p>
+            </div>
+         </section>
         
       </div>
 
