--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
 
    <body>
       
+      <nav>
+         <div class="container" id="navbar">
+            <h3>Chartssss<span class="purple">.</span></h3>
+            <div class="button-div">
+               <p id="mode-btn"><i class="far fa-sun"></i>Light</p>
+            </div>
+         </div>
+      </nav>
+      
       <div class="container">
 
          <div class="header">
